--- a/printer.cfg
+++ b/printer.cfg
@@ -75,9 +75,9 @@ uart_pin: PC11
 tx_pin: PC10
 uart_address: 0
 run_current: 0.580
-stealthchop_threshold: 999999
+stealthchop_threshold: 9999
 
-# y axis front to back (bed stepper)
+# y axis front to back (d stepper)
 [stepper_y]
 step_pin: PB10
 dir_pin: !PB2
@@ -222,8 +222,8 @@ horizontal_move_z: 5
 #min_point: 50,30
 #max_point: 230,230
 probe_count:5,5
-mesh_min: 10,10
-mesh_max: 190, 220
+mesh_min: 14, 28
+mesh_max: 180, 180
 #probe_count: 3,3
 #fade_start: 1.0
 #mesh_pps: 2,2
