--- a/printer.cfg
+++ b/printer.cfg
@@ -3,10 +3,15 @@
 # Creality Sprite Extruder Pro
 # Antclabs BL Touch (Genuine)
 # Raspberry Pi (Mainsail OS)
-# ALPHA V0.1 06/18/2023
+# ALPHA V0.1 06/18/2023 Version.
 
-# Made by CEADD - ceadd.ca
+#Originally Made by:
+
+# Made by CEADD - ceadd.ca 
 # Special thanks to bigtreetech, jamesh1978 and nopp
+
+# Modified and pieced together from many different configs by HRD.  Thank You everyone for posting oyur
+# amazing printer configs, which really helped so much.
 
 # To use this config, the firmware should be compiled for the
 # STM32G0B1 with a "8KiB bootloader" and USB communication.
@@ -130,10 +135,10 @@ filament_diameter: 1.750
 heater_pin: PC8
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PA0
-control: pid
-pid_Kp: 18.53
-pid_Ki: 1.88
-pid_Kd: 45.57
+#control: pid
+#pid_Kp: 18.53
+#pid_Ki: 1.88
+#pid_Kd: 45.57
 min_temp: 0
 max_temp: 300
 pressure_advance: 0.05
@@ -207,7 +212,7 @@ pin: PC6
 #enable_pin:
 
 [safe_z_home]
-home_xy_position: 147.5,190.5
+home_xy_position: 147.5,200.5
 speed: 100
 z_hop: 10.0
 z_hop_speed: 5
@@ -241,7 +246,7 @@ pin_up_reports_not_triggered: true
 pin_up_touch_mode_reports_triggered: false
 x_offset: -32
 y_offset: -41		
-z_offset: 2.8
+#z_offset: 0
 speed: 50
 lift_speed: 20
 samples: 2
@@ -257,79 +262,90 @@ samples_tolerance_retries: 3
 #damping_ratio_x: 0.1
 #damping_ratio_y: 0.1
 
-[gcode_macro PRINT_START]
+[virtual_sdcard]
+#path: ~/gcode_files
+path: /mnt/UDISK/.crealityprint/upload
+# ================================================================================
+# GCode Macros:
+# These macros intercept gcode and replace them with the macro defined.
+# GCode WIKI: https://reprap.org/wiki/G-code
+# ================================================================================
+# ================================================================================
+# GCode Macro: START_PRINT
+# Add START_PRINT in your slicers starting script. 
+# I personally just copied these from angrymrtom on github https://gist.github.com/angrymrtom/88172c35ec1b6291ab7ad867a997c5a5
+# ================================================================================
+[gcode_macro START_PRINT]
 gcode:
-    {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
-    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
-    M117 Homing...
-    G28 Y0 X0 Z0
-    #BED_MESH_PROFILE LOAD=default
-
-    G91 ; relative movements
-    G1 Z10 F5000 ; lift nozzle
-    G90 ; back to absolute
-    G0 X10 Y10 F6000
-
-    M117 Heating...
-    M140 S{BED_TEMP}                ; set bed final temp
-    M104 S{EXTRUDER_TEMP}               ; set extruder final temp
-    M190 S{BED_TEMP}                   ; wait for bed final temp
-    M109 S{EXTRUDER_TEMP}           ; wait for extruder final temp
-
-    M117 Home Z with hot bed
-    G28 Z0
-    BED_MESH_CALIBRATE
-
-    PURGE
-    PRIME_LINE
-
-    G90
-    G1 Z5.0 F6000
-    G92 E0                              ;zero the extruded length again
-    G1 F9000
-    M117 Printing
-
-[gcode_macro PURGE]
+    G28; Home all axes    
+    BED_MESH_CALIBRATE    
+    G92 E0; Reset Extruder
+    G1 Z5.0 F3000; Move Z Axis up little to prevent scratching of Heat Bed
+    G1 X0.1 Y20 Z0.3 F5000.0; Move to start position
+    G1 X0.1 Y200.0 Z0.3 F1500.0 E15; Draw the first line
+    G1 X0.4 Y200.0 Z0.3 F5000.0; Move to side a little
+    G1 X0.4 Y20 Z0.3 F1500.0 E30; Draw the second line
+    G92 E0; Reset Extruder
+    G1 Z5.0 F3000; Move Z Axis up little to prevent scratching of Heat Bed
+    
+# ================================================================================
+# GCode Macro: END_PRINT
+# Add END_PRINT in your slicers ending script
+# ================================================================================
+[gcode_macro END_PRINT]
+gcode =
+    G1 Y190 F1500; bring Y up front 
+    G10 ; set tool offset?  or retract?
+    G91; Relative Positioning
+    G1 Z+10; Move Z up so it doesn't hit anything
+    G1 E-10 F300; Retrack-10
+    G90; Absolute Positioning
+    G1 X10 Y220 F2000; Move to X10, Y220
+    M104 S0; Turn off Extrude (set it to 0)
+    M140 S0; Turn off Bed (set it to 0)
+    M106 S0; turn off cooling fan
+    M84; Disable steppers
+# ================================================================================
+# GCode Macro G29
+# Fires when G29 is sent to the printer
+# ================================================================================
+[gcode_macro G29]
 gcode:
-    SAVE_GCODE_STATE NAME=BEFORE_PURGE
-    M117 Purging
-    G0 X0 Y0 F5000
-    G91
-    G1 E9 F1000
-    G90
-    RESTORE_GCODE_STATE NAME=BEFORE_PURGE
+    G1 Z10 F600
+    G4 P200
+    G1 Z10 F600
+    G4 P100
 
-[gcode_macro PRIME_LINE]
-gcode:
-    SAVE_GCODE_STATE NAME=BEFORE_PRIME
-    M117 Prime Line
-    G92 E0
-    G1 Z2.0 F3000            ; Set nozzle height
-    G1 X3 Y0 Z0.28 F5000.0
-    G1 X3 Y180.0 Z0.28 F1500.0 E15
-    G1 X3 Y180.0 Z0.28 F5000.0
-    G1 X3 Y0 Z0.28 F1500.0 E30
-    G1 Z2.0 F3000
-    G1 X5 Y20 Z0.3 F5000.0
-    G92 E0.0                ; reset extrusion distance
-    G1 Z1 F5000             ; Lift Z
-    RESTORE_GCODE_STATE NAME=BEFORE_PRIME
-
-[gcode_macro PRINT_END]
-gcode:
-
-    M400                           ; wait for buffer to clear
-    G92 E0                         ; zero the extruder
-    G1 E-1.0 F3600                 ; retract filament
-    G91                            ; relative positioning
-    G0 Z1.00 X20.0 Y20.0 F2000     ; move nozzle to remove stringing
-    TURN_OFF_HEATERS
-    M107                           ; turn off fan
-    G1 Z5 F3000                    ; move nozzle up 5mm
-    G90                            ; absolute positioning
-    G0 X0 Y220 F3600               ; park nozzle at rear
-    M84
-    BED_MESH_CLEAR
-    M117 Finished!                 ; display message
-
+ 
 # See the sample-lcd.cfg file for definitions of common LCD displays.
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.125000, -0.081250, 0.011250, 0.120000, 0.156250
+#*# 	  -0.165000, -0.087500, 0.021250, 0.160000, 0.198750
+#*# 	  -0.225000, -0.137500, -0.017500, 0.118750, 0.163750
+#*# 	  -0.275000, -0.158750, -0.025000, 0.131250, 0.173750
+#*# 	  -0.305000, -0.192500, -0.057500, 0.113750, 0.175000
+#*# tension = 0.2
+#*# min_x = 14.0
+#*# algo = lagrange
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 28.0
+#*# x_count = 5
+#*# max_y = 180.0
+#*# mesh_x_pps = 2
+#*# max_x = 180.0
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 17.147
+#*# pid_ki = 0.817
+#*# pid_kd = 90.021
+#*#
+#*# [bltouch]
+#*# z_offset = 3.45
